--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -1,7 +1,9 @@
 .advantages {
   padding-left: 4.3%;
   padding-right: 4.3%;
+  margin-bottom: 19px;
 }
+
 .advantages__list {
   @include ul-line;
   justify-content: space-between;
@@ -10,6 +12,7 @@
 .advantages__item {
   text-align: center;
   font-weight: bold;
+  font-size: 16px;
 }
 
 .advantages__icon {
