--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -13,3 +13,6 @@ $navy: #183f7c;
 $green: #007f00;
 $red: #b70001;
 $grey: #c6c6c6;
+
+$tablet: "(max-width: 768px)";
+$mobile: "(max-width: 500px)";
