--- a/source/styles/base/mixins.scss
+++ b/source/styles/base/mixins.scss
@@ -13,6 +13,11 @@
   padding-left: 2.98%;
   padding-right: 2.98%;
   padding-bottom: 20px;
+
+  @media #{$mobile} {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 @mixin ul-line {
@@ -36,6 +41,10 @@
   color: $navy;
   position: relative;
 
+  @media #{$mobile} {
+    font-size: 14px;
+  }
+
   &::after {
     position: absolute;
     content:'';
@@ -57,6 +66,10 @@
   text-align: center;
   margin: 0;
   padding: 6px 2.98%;
+
+  @media #{$mobile} {
+    font-size: 14px;
+  }
 }
 
 @mixin heading-h2 {
@@ -70,6 +83,10 @@
   padding: 5px 20px;
   margin-top: 48px;
   margin-bottom: 25px;
+
+  @media #{$mobile} {
+    font-size: 14px;
+  }
 }
 
 @mixin article-link {
