--- a/source/styles/blocks/certificates.scss
+++ b/source/styles/blocks/certificates.scss
@@ -3,21 +3,50 @@
   position: relative;
 }
 
-.certificates__list {
-  @include ul-line;
-  flex-wrap: wrap;
+.certificates__row {
+  display: flex;
   justify-content: space-between;
+  margin-bottom: 25px;
+  position: relative;
+  padding-bottom: 4px;
+  border-bottom: 2px solid $navy;
+  align-items: center;
 }
 
 .certificates__name {
-  @include heading-sidebar;
-  margin-top: 0;
-  margin-bottom: 25px;
+  font-size: 16px;
+  line-height: 18.35px;
+  text-transform: uppercase;
+  color: $navy;
+  margin: 0;
+
+  @media #{$mobile} {
+    font-size: 14px;
+  }
 }
 
 .certificates__all-link {
   @include article-link;
-  position: absolute;
-  top: 8px;
-  right: 0;
+  min-width: 110px;
+
+  @media #{$mobile} {
+    font-size: 12px;
+  }
+}
+
+.certificates__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.certificates__link {
+  max-width: 30%;
+  min-width: 84px;
+  text-align: center;
+}
+
+.certificates__thumb {
+  max-width: 100%;
+  max-height: 100%;
 }
