--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -8,6 +8,7 @@
 }
 
 .footer__bottom {
+  padding-top: 10px;
   padding-bottom: 10px;
   display: flex;
   align-items: center;
@@ -20,4 +21,8 @@
   margin-top: 0;
   margin-bottom: 0;
   margin-right: 20px;
+
+  @media #{$tablet} {
+    @include text(14px, 16px);
+  }
 }
