--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,11 +1,87 @@
 .header {
+  min-width: inherit;
   background-color: $header-bg;
+
+  @media #{$tablet} {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  @media #{$mobile} {
+    display: block;
+    position: relative;
+  }
 }
 
 .header__wrap {
   @include wrap;
+
+  @media #{$tablet} {
+    padding: 0;
+    min-width: 320px;
+    width: calc(100% - 40px);
+    margin-right: 8px;
+  }
+
+  @media #{$mobile} {
+    display: block;
+    margin-right: 0;
+    width: 100%;
+    min-width: 280px;
+  }
 }
 
 .nav-toggle {
-  display: none;
+  opacity: 0;
+  position: relative;
+
+  @media #{$tablet} {
+    width: 32px;
+    height: 32px;
+    opacity: 1;
+    padding: 0;
+    border-radius: 50%;
+    border: 2px solid $navy;
+    background-color: transparent;
+  }
+
+   @media #{$mobile} {
+    position: absolute;
+    bottom: 23px;
+    left: calc(50% + 25px);
+
+  }
 }
+
+.nav-toggle span {
+  display: block;
+  position: absolute;
+  top: calc(50% - 1.5px);
+  left: calc(50% - 8px);
+  width: 16px;
+  height: 3px;
+  background-color: $navy;
+
+  &::before,
+  &::after {
+    content: '';
+    width: 100%;
+    height: inherit;
+    background-color: $navy;
+    position: absolute;
+    left: calc(50% - 8px);
+  }
+
+  &:before {
+    top: -6px;
+  }
+
+  &:after {
+    top: 6px;
+  }
+}
+
+
