--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -6,7 +6,11 @@
   background-image: url('../img/decoration/header.jpg');
   background-position: top center;
   background-repeat: no-repeat;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.3);
+
+  @media #{$tablet} {
+    display: none;
+  }
 }
 
 .main-nav__list {
@@ -57,3 +61,5 @@
   font-size: 16px;
   text-align: right;
 }
+
+
