--- a/source/styles/base/global.scss
+++ b/source/styles/base/global.scss
@@ -2,6 +2,8 @@ html {
   box-sizing: border-box;
 }
 
+
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -29,6 +31,7 @@ body {
 
   @media #{$tablet} {
     background: none;
+    position: relative;
   }
 }
 
