--- a/source/markup/mixins.pug
+++ b/source/markup/mixins.pug
@@ -19,9 +19,9 @@ mixin about-advokat (className, param)
 
 mixin nav (className, name, items)
   nav(class=`${className}`)
-    div(class=`${className}__name`)=name
+    button(class=`${className}__name`, href='#', disabled)=name
     ul(class=`${className}__list`)
       each item in items
         li(class=`${className}__item`)
-          a(class=`${className}__link` href='#')= item
+          a(class=`${className}__link`, href='#')= item
 
