--- a/source/styles/base/mixins.scss
+++ b/source/styles/base/mixins.scss
@@ -1,6 +1,6 @@
 @mixin wrap {
-  padding-left: 3.125%;
-  padding-right: 3.125%;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 @mixin case {
@@ -53,6 +53,8 @@
     width: 100%;
     height: 2px;
     background-color: $navy;
+    min-width: 150px;
+    max-width: 220px;
   }
 }
 
