--- a/source/styles/blocks/main-content.scss
+++ b/source/styles/blocks/main-content.scss
@@ -13,10 +13,19 @@
   padding-top: 19px;
   display: flex;
   justify-content: space-between;
+  position: relative;
 
   @media #{$mobile} {
+    display: block;
     padding-left: 20px;
     padding-right: 20px;
+  }
+}
+
+.main-content__wrap--show-submenu {
+  @media #{$tablet} {
+    padding-top: 0;
+    flex-wrap: wrap;
   }
 }
 
