--- a/source/styles/blocks/service-menu.scss
+++ b/source/styles/blocks/service-menu.scss
@@ -3,10 +3,23 @@
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
   padding-bottom: 20px;
   margin-bottom: 20px;
+
+  @media #{$tablet} {
+    display: block;
+  }
+}
+
+.service-menu--click {
+  display: block;
 }
 
 .service-menu__name {
   @include heading-sidebar;
+  width: calc(100% - 40px);
+  padding: 7px 0;
+  border: none;
+  background-color: transparent;
+  text-align: left;
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 16px;
