--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -4,6 +4,7 @@
 @import '../base/global.scss';
 @import '../blocks/header.scss';
 @import '../blocks/lawyer.scss';
+@import '../blocks/nav-toggle.scss';
 @import '../blocks/main-nav.scss';
 @import '../blocks/main-content.scss';
 @import '../blocks/sidebar.scss';
