--- a/source/markup/mixins.pug
+++ b/source/markup/mixins.pug
@@ -7,19 +7,19 @@ mixin about-advokat (className, param)
       p.lawyer__description Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587
     .lawyer__contacts
       p.lawyer__adress
-        img(src=`../img/content/icon-adress-${param}.png`, alt='Иконка геолокации',  width="32" height="32").lawyer__icon
+        img(src=`img/content/icon-adress-${param}.png`, alt='Иконка геолокации',  width="32" height="32").lawyer__icon
         span Санкт-Петербург, г. Пушкин ул. Оранжерейная д. 48 БЦ "Графит" 2 этаж, офис 28
       p.lawyer__connections
         a(href='tel:+7-(812)-962-19-51').lawyer__phone
-          img(src=`../img/content/icon-phone-${param}.png`, alt='Иконка телефона',  width="32" height="32").lawyer__icon
+          img(src=`img/content/icon-phone-${param}.png`, alt='Иконка телефона',  width="32" height="32").lawyer__icon
           span +7 (812) 962 19 51
         a(href='mailto:9621951@mail.ru').lawyer__email
-          img(src=`../img/content/icon-mail-${param}.png`, alt='Иконка email',  width="32" height="32").lawyer__icon
+          img(src=`img/content/icon-mail-${param}.png`, alt='Иконка email',  width="32" height="32").lawyer__icon
           span 9621951@mail.ru
 
 mixin nav (className, name, items)
   nav(class=`${className}`)
-    button(class=`${className}__name`, href='#', disabled)=name
+    button(class=`${className}__name service-menu--no-js`, href='#', disabled)=name
     ul(class=`${className}__list`)
       each item in items
         li(class=`${className}__item`)
