Fixed minor bugs

--- a/source/styles/blocks/cms-content.scss
+++ b/source/styles/blocks/cms-content.scss
@@ -29,7 +29,7 @@
     background-color: $navy;
     color: $white;
     font-style: italic;
-    background-image: url('../../img/decoration/balancr.png');
+    background-image: url('../../img/decoration/balance.png');
     background-position: 96% center;
     background-repeat: no-repeat;
 
