Add scripts to open images

--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -16,3 +16,4 @@
 @import '../blocks/certificates.scss';
 @import '../blocks/footer.scss';
 @import '../blocks/social.scss';
+@import '../blocks/gallery.scss';
