--- a/source/markup/main-template.pug
+++ b/source/markup/main-template.pug
@@ -9,7 +9,7 @@ html(lang='ru')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width')
     link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600&subset=cyrillic" rel="stylesheet")
-    link(href='css/style.css', rel='stylesheet')
+    link(href='css/style.min.css', rel='stylesheet')
 
     // SEO Задание тега Title
     title Адвокатский кабинет Якубов Рашад Киязович
